  concatenated as input stream.

- Added option --atis-idsa to plugins "scrambler" and "descrambler" (perform
  ATIS-IDSA scrambling instead of DVB-CSA2).

- Added utility "tsecmg", a DVB SimulCrypt-compliant ECMG stub to test system
  integration. The plugin "descrambler" has been enhanced to decode the "fake"
  ECM's which are generated by "tsecmg".

- Bug fix: Incorrect behaviour on Linux and macOS when receiving multicast with
  plugins "ip" and "mpeinject" and a --local-interface was specified.

- Bug fix: "tsanalyze" and a few plugins could crash when a video PID contained
  corrupted AVC/H.264 video (or incorrect video data which looked like H.264).

- Bug fix: Plugin "analyze" with option --interval incorrectly used the TS
  clock to produce the analysis files instead of the wall clock time.

- Bug fix: Plugin "history": Detection of scrambling transitions: Now ignore
  packets without payload or with short payloads (less than 8 bytes). These
  packets are normally left clear in a scrambled PID. Considering them as clear
  packets used to report spurious scrambled-to-clear transitions, immediately
  followed by clear-to-scrambled transistions.

Version 3.9-619

- Added plugins mpe and mpeinject to respectively extract and inject MPE
  (Multi-Protocol Encapsulation) datagrams to/from UDP/IP. A complete example
  is provided in the user's guide.

- Added options --add-start-stuffing and --add-stop-stuffing to tsp.

- Added options --sei-avc and --uuid-sei to plugin pes.

- Added options --add-programinfo-id, --set-stream-identifier, --set-cue-type
  and --set-data-broadcast-id to plugin pmt.

- Added option --identify to plugin t2mi.

- Added options --all-once, --pack-all-sections and --pack-and-flush to tstables
  and plugin tables.

- Added option --default-charset to tsanalyze and plugin analyze.

- Added signalization for data broadcast and MPE.

- Improved display of Dektec devices capabilities.
