@@ -29,6 +29,8 @@ Version 3.10-668
   integration. The plugin "descrambler" has been enhanced to decode the "fake"
   ECM's which are generated by "tsecmg".
 
+- Added option --integer to tsversion (useful to check a version in a script).
+
 - Bug fix: Incorrect behaviour on Linux and macOS when receiving multicast with
   plugins "ip" and "mpeinject" and a --local-interface was specified.
 
